syntax = "proto3";

import "diztil_pojo.proto";
package io.github.gravetii.generated;


service TrackerService {
    rpc register (Node) returns (Node) {
    }
    rpc search (SearchRequest) returns (stream SearchResponse) {
    }
}